[package]
name = "deby"
version = "0.1.0"
authors = ["ink8bit <ink8bit@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
chrono = "0.4.19"
