[package]
name = "deby"
version = "0.0.7"
authors = ["ink8bit <ink8bit@users.noreply.github.com>"]
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
chrono = "0.4.19"
